err/cim.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/CDPSM'...
Listing './lib/python3.5/site-packages/CDPSM/IEC61968'...
Listing './lib/python3.5/site-packages/CDPSM/IEC61970'...
Listing './lib/python3.5/site-packages/CDPSM/IEC61970/Generation'...
Listing './lib/python3.5/site-packages/CIM'...
Listing './lib/python3.5/site-packages/CIM/Generation'...
Listing './lib/python3.5/site-packages/CPSM'...
Listing './lib/python3.5/site-packages/CPSM/Generation'...
Listing './lib/python3.5/site-packages/Dynamics'...
Listing './lib/python3.5/site-packages/Dynamics/Dynamics'...
Listing './lib/python3.5/site-packages/UCTE'...
Listing './lib/python3.5/site-packages/UCTE/Generation'...
Listing './lib/python3.5/site-packages/cdpsm'...
Listing './lib/python3.5/site-packages/cdpsm/iec61968'...
Listing './lib/python3.5/site-packages/cdpsm/iec61970'...
Listing './lib/python3.5/site-packages/cdpsm/iec61970/generation'...
Listing './lib/python3.5/site-packages/cim'...
Listing './lib/python3.5/site-packages/cim/generation'...
Listing './lib/python3.5/site-packages/cim-14.2.egg-info'...
Listing './lib/python3.5/site-packages/cimrdf'...
Compiling './lib/python3.5/site-packages/cimrdf/parser.py'...
***   File "./lib/python3.5/site-packages/cimrdf/parser.py", line 32
    exec "import %s" % mod
                   ^
SyntaxError: Missing parentheses in call to 'exec'

Listing './lib/python3.5/site-packages/cimrdf/test'...
Compiling './lib/python3.5/site-packages/cimrdf/test/CIMTestCase.py'...
***   File "./lib/python3.5/site-packages/cimrdf/test/CIMTestCase.py", line 38
    print dir(Production)
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cpsm'...
Listing './lib/python3.5/site-packages/cpsm/generation'...
Listing './lib/python3.5/site-packages/dynamics'...
Listing './lib/python3.5/site-packages/dynamics/dynamics'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/ucte'...
Listing './lib/python3.5/site-packages/ucte/generation'...
Listing './share'...
Listing './share/python-wheels'...
